[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/fight.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/UI/statShower.tscn" type="PackedScene" id=3]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="C1" type="VBoxContainer" parent="."]
margin_right = 750.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TB" type="HBoxContainer" parent="C1"]
margin_right = 750.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="XPStatShower" parent="C1/TB" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 247.0
margin_bottom = 14.0

[node name="GStatShower" parent="C1/TB" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 251.0
margin_right = 498.0
margin_bottom = 14.0

[node name="LS" type="Label" parent="C1/TB"]
margin_left = 502.0
margin_right = 750.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Streak:"

[node name="CEnemy" type="VBoxContainer" parent="C1"]
margin_top = 18.0
margin_right = 750.0
margin_bottom = 535.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="CeHP" type="PanelContainer" parent="C1/CEnemy"]
margin_right = 750.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="PBeHP" type="ProgressBar" parent="C1/CEnemy/CeHP"]
margin_left = 7.0
margin_top = 7.0
margin_right = 743.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="LeHP" type="Label" parent="C1/CEnemy/CeHP"]
margin_left = 7.0
margin_top = 7.0
margin_right = 743.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "enemy HP Label
"
align = 1
valign = 1

[node name="CEnemy" type="CenterContainer" parent="C1/CEnemy"]
margin_top = 49.0
margin_right = 750.0
margin_bottom = 517.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Enemy" type="Sprite" parent="C1/CEnemy/CEnemy"]
position = Vector2( 375, 200 )

[node name="CInv" type="VBoxContainer" parent="C1"]
margin_top = 539.0
margin_right = 750.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CHP" type="PanelContainer" parent="C1/CInv"]
margin_right = 750.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="PBHP" type="ProgressBar" parent="C1/CInv/CHP"]
margin_left = 7.0
margin_top = 7.0
margin_right = 743.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
percent_visible = false

[node name="LHP" type="Label" parent="C1/CInv/CHP"]
margin_left = 7.0
margin_top = 7.0
margin_right = 743.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HP Label"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CCInv" type="CenterContainer" parent="C1/CInv"]
margin_top = 32.0
margin_right = 750.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Inv" parent="C1/CInv/CCInv" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 375.0
margin_top = 35.0
margin_right = 375.0
margin_bottom = 35.0

[node name="CChF" type="HBoxContainer" parent="C1"]
margin_top = 646.0
margin_right = 750.0
margin_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lchat" type="Label" parent="C1/CChF"]
margin_right = 750.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CF" type="CenterContainer" parent="C1/CChF"]
visible = false
margin_left = 252.0
margin_right = 750.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="BAtk" type="Button" parent="C1/CChF/CF"]
margin_left = 223.0
margin_top = 42.0
margin_right = 275.0
margin_bottom = 62.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Attack"

[connection signal="pressed" from="C1/CChF/CF/BAtk" to="." method="_on_BAtk_pressed"]
